--- a/exercise_2/after/.project
+++ b/exercise_2/after/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>before-exercise-1</name>
+	<name>after-exercise-2</name>
 	<comment></comment>
 	<projects>
 	</projects>
